-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.11.0 FF
-
None
-
-
4ba8601b7 (dev)
Hi,
Following https://codereview.qt-project.org/c/qt/qtbase/+/653866
I am unable to compile a dev build for ios. It fails because of incomplete QUrl type.
/Users/runner/work/qt/qt/qtbase/src/gui/platform/darwin/qapplefileiconengine.mm:25:22: error: incomplete type 'QUrl' named in nested name specifier
25 | const QUrl url = QUrl::fromLocalFile(fileInfo().canonicalFilePath());
/Users/runner/work/qt/qt/qtbase/src/corelib/kernel/qmetatype.h:1550:1: note: forward declaration of 'QUrl'
1550 | QT_FOR_EACH_STATIC_CORE_CLASS(QT_FORWARD_DECLARE_STATIC_TYPES_ITER)
/Users/runner/work/qt/qt/qtbase/src/corelib/kernel/qmetatype.h:112:17: note: expanded from macro 'QT_FOR_EACH_STATIC_CORE_CLASS'
112 | F(QUrl, 17, QUrl) \
/Users/runner/work/qt/qt/qtbase/src/gui/platform/darwin/qapplefileiconengine.mm:25:16: error: variable has incomplete type 'const QUrl'
25 | const QUrl url = QUrl::fromLocalFile(fileInfo().canonicalFilePath());
/Users/runner/work/qt/qt/qtbase/src/corelib/kernel/qmetatype.h:1550:1: note: forward declaration of 'QUrl'
1550 | QT_FOR_EACH_STATIC_CORE_CLASS(QT_FORWARD_DECLARE_STATIC_TYPES_ITER)