macOS: include QUrl in QAppleFileIconEngine

The type is only forward declared via qmetatype.h so far, and building
(presumably) only worked due to pre-compiled headers.

Amends f036bd0edadf0f59757f4a8fa695706273eb72d2.

Fixes: QTBUG-138100
Task-number: QTBUG-134239
Change-Id: Icc39b23cc08a309cba46c1d9ec598a6a0639754f
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>